--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "scripts": {
     "xo": "xo"
   },
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions",
+    "Firefox ESR"
+  ],
   "prettier": {
     "singleQuote": true
   },
