--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Toggl Button+ : Productivity & Time Tracker",
+  "name": "Toggl Button (todoist+) : Productivity & Time Tracker",
   "short_name": "Toggl Button+",
-  "version": "1.10.9",
+  "version": "1.10.9.1",
   "manifest_version": 2,
-  "description": "Puts a timer into any web tool and allows quick real time productivity tracking with all the data stored on your Toggl account",
+  "description": "Puts a timer into any web tool and allows quick real time productivity tracking with all the data stored on your Toggl account (todoist+)",
   "background": {
     "scripts": [
       "scripts/vendor/bugsnag-3.min.js",
